update readme and minor refactor
