# public/docs/openapi.yaml
@@ -86,7 +86,7 @@ paths:
                 name:
                   type: string
                   description: 'Must be at least 5 characters. Must not be greater than 100 characters.'
-                  example: cfgermpfw
+                  example: fyvqcppenztxlkoptkax
                 latitude:
                   type: string
                   description: 'The postcodes latitude. Must match the regex /^[-]?(([0-8]?[0-9])\.(\d+))|(90(\.0+)?)$/.'
@@ -97,10 +97,10 @@ paths:
                   example: '-2.255708'
                 status:
                   type: string
-                  description: ''
-                  example: X
+                  description: 'The status. C for closed and O for open.'
+                  example: O
                   enum:
-                    - X
+                    - C
                     - O
                 store_type:
                   type: string
@@ -113,49 +113,21 @@ paths:
                 max_delivery_distance:
                   type: integer
                   description: 'Must be at least 0. Must not be greater than 100.'
-                  example: 7
+                  example: 11
               required:
                 - name
                 - latitude
+                - longitude
                 - status
                 - store_type
                 - max_delivery_distance
       security: []
-    get:
-      summary: 'Find stores within a specified distance (in miles)'
-      operationId: findStoresWithinASpecifiedDistanceinMiles
+  /api/shops/search:
+    post:
+      summary: 'Search for stores within a specified distance (in miles).'
+      operationId: searchForStoresWithinASpecifiedDistanceinMiles
       description: ''
-      parameters:
-        -
-          in: query
-          name: latitude
-          description: 'The postcodes geographical latitude.'
-          example: 57.084444
-          required: true
-          schema:
-            type: number
-            description: 'The postcodes geographical latitude.'
-            example: 57.084444
-        -
-          in: query
-          name: longitude
-          description: 'The postcodes geographical longitude.'
-          example: -2.255708
-          required: true
-          schema:
-            type: number
-            description: 'The postcodes geographical longitude.'
-            example: -2.255708
-        -
-          in: query
-          name: distance
-          description: 'Max distance (in miles) to nearest shop.'
-          example: 10.0
-          required: true
-          schema:
-            type: number
-            description: 'Max distance (in miles) to nearest shop.'
-            example: 10.0
+      parameters: []
       responses:
         200:
           description: ''
@@ -203,21 +175,16 @@ paths:
             schema:
               type: object
               properties:
-                latitude:
+                postcode:
                   type: string
-                  description: 'Must match the regex /^[-]?(([0-8]?[0-9])\.(\d+))|(90(\.0+)?)$/.'
-                  example: 9.5)|)
-                longitude:
-                  type: string
-                  description: 'Must match the regex /^[-]?((((1[0-7][0-9])|([0-9]?[0-9]))\.(\d+))|180(\.0+)?)$/.'
-                  example: '-143|52).44)|180.00)'
+                  description: 'Must match the regex /^([Gg][Ii][Rr] 0[Aa]{2})|((([A-Za-z][0-9]{1,2})|(([A-Za-z][A-Ha-hJ-Yj-y][0-9]{1,2})|(([A-Za-z][0-9][A-Za-z])|([A-Za-z][A-Ha-hJ-Yj-y][0-9][A-Za-z]?))))\s?[0-9][A-Za-z]{2})$/.'
+                  example: 'GIr 0AA|Q04|xg94|v4T|cq4j)))s1jW)'
                 distance:
                   type: number
                   description: 'Must not be greater than 100.'
-                  example: 25
+                  example: 18
               required:
-                - latitude
-                - distance
+                - postcode
       security: []
 tags:
   -
